<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WorkHours</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="addToDatabase">Add to database</string>
    <string name="setTime">Set Time</string>
    <string name="setDate">Set Date</string>
    <string name="Time">Time: </string>
    <string name="date">Date:  </string>
    <string name="deleteById">Enter id to delete: </string>
    <string name="delete">Delete</string>
    <string name="type">Type:</string>
    <string name="typePrompt">Choose a type</string>

    <string name="msgEnterDayPartId">Please provide the DayPart id.</string>
</resources>
